libraries/ecc100j/lib/ecc100/ecc.h

typedef int Bln32;                              /**< Boolean compatible to older C      */
typedef int Int32;                              /**< Basic type                         */
/** Return values of functions */
#define NCB_Ok                   0              /**< No error                              */
#define NCB_Error              (-1)             /**< Unspecified error                     */
#define NCB_Timeout              1              /**< Communication timeout                 */
#define NCB_NotConnected         2              /**< No active connection to device        */
#define NCB_DriverError          3              /**< Error in comunication with driver     */
#define NCB_DeviceLocked         7              /**< Device is already in use by other     */
#define NCB_InvalidParam         9              /**< Parameter out of range                */
#define NCB_FeatureNotAvailable 10              /**< Feature only available in pro version */
/** @brief  Actor types                                                              */
typedef enum {
  ECC_actorLinear,                           /**< Actor is of linear type            */
  ECC_actorGonio,                            /**< Actor is of goniometer type        */
  ECC_actorRot                               /**< Actor is of rotator type           */
} ECC_actorType;
/** @brief  Information about a discovered device                                    */
struct EccInfo{
  int   id;                                  /**< Programmed ID of the device        */
  Bln32 locked;                              /**< Device locked by other program     */
};
/** @brief Check devices
 *
 *  Checks whether the USB driver is accessible and how many devices are connected.
 *  The function returns with a pointer to an array of struct @ref EccInfo. The return code
 *  tells how many devices were found (and so how many elements the array contains).
 *  The struct contains information wheteher a device is accessible (unlocked) or is already
 *  in use by someone else (locked). The device ID is a number programmed by the user
 *  to distinguish between multiple devices. It is valid only if the device is unlocked.
 *
 *  The function must not be called as long as a device is connected by @ref ECC_Connect.
 *  
 *  @param  info  Output: Pointer to array of struct 'EccInfo'. The parameter may be NULL
 *                to ignore the devices array.
 *  @return Count of found devices
 */
Int32 NCB_API ECC_Check( EccInfo** info );
/** @brief Inquire device properties
 *
 *  The function provides an alternative (and more labview friendly) way to
 *  inspect the devices found by @ref ECC_Check . It returns the locking state
 *  and device ID as provided in the info array of @ref ECC_Check .
 *  @param  deviceNo  Index of the device, must be smaller than the number of found devices.
 *  @param  devId     Output: Device ID, only valid if unlocked.
 *  @param  locked    Output: Locking state.
 */
Int32 NCB_API ECC_getDeviceInfo( Int32 deviceNo, Int32 * devId, Bln32 * locked );
/** @brief Release info
 *
 *  Releases the memory allocated by Ecc_Check for the info array.
 */
void NCB_API ECC_ReleaseInfo();
/** @brief Connect device
 *
 *  Initializes and connects the selected ECC (0..n).
 *  This has to be done before any other function (except ECC_Check and ECC_ReleaseInfo) can be called.
 *  The returned handle is used to address the device in further communication.
 *
 *  @param  deviceNo: Index of the device to connect (0..n)
 *  @param  deviceHandle: Pointer to (user)memory which will retrieve the Handle.
 *
 *  @return Result of function
 */
Int32 NCB_API ECC_Connect( Int32 deviceNo, Int32* deviceHandle );
/** @brief Close connection
 *
 *  Closes the connection to the device.
 *
 *  @param  deviceHandle: Handle of device
 *
 *  @return  Result:  NCB_Ok (exclusive result value)
 */
Int32 NCB_API ECC_Close( Int32 deviceHandle );
/** @brief Control output stage
 *
 *  Controls the output relais of the selected axis.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        Switches the output relais
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlOutput( Int32 deviceHandle, 
                                 Int32 axis,
                                 Bln32* enable,
                                 Bln32 set );
/** @brief Control amplitude
 *
 *  Controls the amplitude of the actuator signal.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  amplitude     Amplitude in mV
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlAmplitude( Int32 deviceHandle, 
                                    Int32 axis,
                                    Int32* amplitude,
                                    Bln32 set );
/** @brief Control frequency
 *
 *  Controls the frequency of the actuator signal.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  frequency     Frequency in mHz
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlFrequency( Int32 deviceHandle,
                                    Int32 axis,
                                    Int32* frequency,
                                    Bln32 set );