ecc100j/src/ecc100/bindings/EccLibrary.java

package ecc100.bindings;

import java.util.Collections;
import java.util.Iterator;

import org.bridj.BridJ;
import org.bridj.CRuntime;
import org.bridj.FlagSet;
import org.bridj.IntValuedEnum;
import org.bridj.Pointer;
import org.bridj.ann.Convention;
import org.bridj.ann.Library;
import org.bridj.ann.Ptr;
import org.bridj.ann.Runtime;

/**
 * Wrapper for library <b>ecc</b><br>
 * This file was autogenerated by
 * <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that
 * <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a
 * few opensource projects.</a>.<br>
 * For help, please visit
 * <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or
 * <a href="http://bridj.googlecode.com/">BridJ</a> .
 */
@Library("ecc")
@Runtime(CRuntime.class)
public class EccLibrary
{
  static
  {
    BridJ.register();
  }

  /**
   * enum values<br>
   * <i>native declaration : lib\ecc100\ecc.h</i>
   */
  public enum ECC_actorType implements IntValuedEnum<ECC_actorType>
  {
   /** < Actor is of linear type */
   ECC_actorLinear(0),
   /** < Actor is of goniometer type */
   ECC_actorGonio(1),
   /** < Actor is of rotator type */
   ECC_actorRot(2);
    ECC_actorType(long value)
    {
      this.value = value;
    }

    public final long value;

    public long value()
    {
      return this.value;
    }

    public Iterator<ECC_actorType> iterator()
    {
      return Collections.singleton(this).iterator();
    }

    public static IntValuedEnum<ECC_actorType> fromValue(int value)
    {
      return FlagSet.fromValue(value, values());
    }
  };

  /** <i>native declaration : lib\ecc100\ecc.h</i> */
  public static final int NCB_NotConnected = (int) 2;
  /** <i>native declaration : lib\ecc100\ecc.h</i> */
  public static final int NCB_DriverError = (int) 3;
  /** <i>native declaration : lib\ecc100\ecc.h</i> */
  public static final int NCB_InvalidParam = (int) 9;
  /** <i>native declaration : lib\ecc100\ecc.h</i> */
  public static final int NCB_Error = (int) (-1);
  /** <i>native declaration : lib\ecc100\ecc.h</i> */
  public static final int NCB_DeviceLocked = (int) 7;
  /** <i>native declaration : lib\ecc100\ecc.h</i> */
  public static final int NCB_Ok = (int) 0;
  /** <i>native declaration : lib\ecc100\ecc.h</i> */
  public static final int NCB_Timeout = (int) 1;
  /** <i>native declaration : lib\ecc100\ecc.h</i> */
  public static final int NCB_FeatureNotAvailable = (int) 10;

  /**
   * @brief Check devices<br>
   *        <br>
   *        Checks whether the USB driver is accessible and how many devices are
   *        connected.<br>
   *        The function returns with a pointer to an array of struct @ref
   *        EccInfo. The return code<br>
   *        tells how many devices were found (and so how many elements the
   *        array contains).<br>
   *        The struct contains information wheteher a device is accessible
   *        (unlocked) or is already<br>
   *        in use by someone else (locked). The device ID is a number
   *        programmed by the user<br>
   *        to distinguish between multiple devices. It is valid only if the
   *        device is unlocked.<br>
   *        <br>
   *        The function must not be called as long as a device is connected
   *        by @ref ECC_Connect.<br>
   *        <br>
   * @param info
   *          Output: Pointer to array of struct 'EccInfo'. The parameter may be
   *          NULL<br>
   *          to ignore the devices array.<br>
   * @return Count of found devices<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_Check(EccInfo**)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:113</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_Check(Pointer<Pointer<EccInfo>> info)
  {
    return ECC_Check(Pointer.getPeer(info));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_Check(@Ptr long info);

  /**
   * @brief Inquire device properties<br>
   *        <br>
   *        The function provides an alternative (and more labview friendly) way
   *        to<br>
   *        inspect the devices found by @ref ECC_Check . It returns the locking
   *        state<br>
   *        and device ID as provided in the info array of @ref ECC_Check .<br>
   * @param deviceNo
   *          Index of the device, must be smaller than the number of found
   *          devices.<br>
   * @param devId
   *          Output: Device ID, only valid if unlocked.<br>
   * @param locked
   *          Output: Locking state.<br>
   *          Original signature :
   *          <code>__attribute__((dllimport)) Int32 ECC_getDeviceInfo(Int32, Int32*, Bln32*)</code><br>
   *          <i>native declaration : lib\ecc100\ecc.h:126</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getDeviceInfo(int deviceNo,
                                      Pointer<Integer> devId,
                                      Pointer<Integer> locked)
  {
    return ECC_getDeviceInfo(deviceNo,
                             Pointer.getPeer(devId),
                             Pointer.getPeer(locked));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getDeviceInfo(int deviceNo,
                                                @Ptr long devId,
                                                @Ptr long locked);

  /**
   * @brief Release info<br>
   *        <br>
   *        Releases the memory allocated by Ecc_Check for the info array.<br>
   *        Original signature :
   *        <code>__attribute__((dllimport)) void ECC_ReleaseInfo()</code><br>
   *        <i>native declaration : lib\ecc100\ecc.h:134</i>
   */
  @Convention(Convention.Style.StdCall)
  public static native void ECC_ReleaseInfo();

  /**
   * @brief Connect device<br>
   *        <br>
   *        Initializes and connects the selected ECC (0..n).<br>
   *        This has to be done before any other function (except ECC_Check and
   *        ECC_ReleaseInfo) can be called.<br>
   *        The returned handle is used to address the device in further
   *        communication.<br>
   *        <br>
   * @param deviceNo:
   *          Index of the device to connect (0..n)<br>
   * @param deviceHandle:
   *          Pointer to (user)memory which will retrieve the Handle.<br>
   *          <br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_Connect(Int32, Int32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:150</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_Connect(int deviceNo,
                                Pointer<Integer> deviceHandle)
  {
    return ECC_Connect(deviceNo, Pointer.getPeer(deviceHandle));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_Connect(int deviceNo,
                                          @Ptr long deviceHandle);

  /**
   * @brief Close connection<br>
   *        <br>
   *        Closes the connection to the device.<br>
   *        <br>
   * @param deviceHandle:
   *          Handle of device<br>
   *          <br>
   * @return Result: NCB_Ok (exclusive result value)<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_Close(Int32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:161</i>
   */
  @Convention(Convention.Style.StdCall)
  public static native int ECC_Close(int deviceHandle);

  /**
   * @brief Control output stage<br>
   *        <br>
   *        Controls the output relais of the selected axis.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          Switches the output relais<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlOutput(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:179</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlOutput(int deviceHandle,
                                      int axis,
                                      Pointer<Integer> enable,
                                      int set)
  {
    return ECC_controlOutput(deviceHandle,
                             axis,
                             Pointer.getPeer(enable),
                             set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlOutput(int deviceHandle,
                                                int axis,
                                                @Ptr long enable,
                                                int set);

  /**
   * @brief Control amplitude<br>
   *        <br>
   *        Controls the amplitude of the actuator signal.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param amplitude
   *          Amplitude in mV<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlAmplitude(Int32, Int32, Int32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:195</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlAmplitude(int deviceHandle,
                                         int axis,
                                         Pointer<Integer> amplitude,
                                         int set)
  {
    return ECC_controlAmplitude(deviceHandle,
                                axis,
                                Pointer.getPeer(amplitude),
                                set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlAmplitude(int deviceHandle,
                                                   int axis,
                                                   @Ptr long amplitude,
                                                   int set);

  /**
   * @brief Control frequency<br>
   *        <br>
   *        Controls the frequency of the actuator signal.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param frequency
   *          Frequency in mHz<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlFrequency(Int32, Int32, Int32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:211</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlFrequency(int deviceHandle,
                                         int axis,
                                         Pointer<Integer> frequency,
                                         int set)
  {
    return ECC_controlFrequency(deviceHandle,
                                axis,
                                Pointer.getPeer(frequency),
                                set);
  }
